@@ -4,6 +4,10 @@ Shlomi Fish <shlomif@cpan.org>
 :Date: 2009-09-05
 :Revision: $Id$
 
+1. Got the tests to pass with +cmake -DFCS_WITHOUT_DEPTH_FIELD=1+ by making
+the library behave the same as without it. This also affected the behaviour of
++./fc-solve -l mo+ with attempting to solve Baker’s Dozen deals.
+
 Version 3.12.0: (12-Jun-2012)
 -----------------------------
 
